# gpti-grupo20

./: .gitignore  README.md  install_dependencies.py  main.py  project-description.md  project-tech.md  pyproject.toml  requirements.txt  system_prompt.txt
app/image_functions/: jpeg_to_png.py
app/pdf_functions/: pdf_page_deleter.py  pdf_to_png.py
bot_functions/: ad_messages.py  conversation_manager.py  gemini_client.py  handlers.py  state_manager.py  utils.py
bot_functions/file_processing/: document_processor.py  image_processor.py  pdf_processor.py  zip_processor.py
bot_functions/handlers/: command_handlers.py  document_handlers.py  gemini_handlers.py  image_handlers.py  main_handlers.py  pdf_handlers.py  zip_handlers.py
file_manipulator/app/: main.py
file_manipulator/app/image_functions/: png_to_jpeg.py  png_to_pdf.py
file_manipulator/app/pdf_functions/: __init__.py  pdf_merger.py
prompts/: system_prompt.txt
